# rgnucash

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  wrapper.h
app/: Cargo.toml  build.rs
app/examples/: simple_business.rs
app/src/: engine_ext.rs  lib.rs  query.rs
app/src/business/: address.rs  billterm.rs  commodity.rs  customer.rs  employee.rs  entry.rs  invoice.rs  job.rs  mod.rs  tax.rs  vendor.rs
debian/: changelog  control
docker/libgnucash/: Containerfile  README.md  build-in-container.sh  build.sh  install.sh
docker/libgnucash/debian-bundle/: control.in  ld.so.conf  postinst
docker/rgnucash/: Containerfile  README.md  build-in-container.sh  build.sh
examples/: account_analysis.rs  account_tree.rs  balance_sheet.rs  create_transaction.rs  export_csv.rs  list_accounts.rs  opening_balances.rs  price_database.rs  reconcile_account.rs  search_transactions.rs  simple_book.rs  simple_business.rs  simple_session.rs
src/: account.rs  bindings_generated.rs  book.rs  error.rs  iter.rs  lib.rs  price.rs  split.rs  transaction.rs  types.rs
src/business/: address.rs  billterm.rs  customer.rs  employee.rs  entry.rs  invoice.rs  job.rs  mod.rs  owner.rs  taxtable.rs  vendor.rs
